--- a/src/app/components/admin/admin-main-page/admin-main-page.component.html
+++ b/src/app/components/admin/admin-main-page/admin-main-page.component.html
@@ -18,7 +18,7 @@
       <img src="assets/admin/admin-second.svg" class="item-img first" alt="second">
       <p>Все заявки на продвижение места</p>
       <h5>Посмотреть полный список заявок на продвижение места, которые оставили пользователи</h5>
-      <button class="direct-btn" type="button">
+      <button class="direct-btn" type="button" routerLink="/admin/requests-to-app">
         <span>Перейти</span>
         <img src="assets/admin/arrow.svg" alt="arrow">
       </button>
