--- a/src/app/components/admin/requests-to-app/requests-to-app.component.html
+++ b/src/app/components/admin/requests-to-app/requests-to-app.component.html
@@ -71,61 +71,60 @@
     </div>
 
     <ul class="cards">
-      <li class="card-li" *ngFor="let coworking of filteredCoworkings">
-        <div class="card" *ngIf="coworking.status == 'На проверке' || coworking.status == null">
+      <li class="card-li" *ngFor="let ad of filteredAds">
+        <div class="card" *ngIf="ad.status == 'На проверке' || ad.status == null">
           <div class="first-block__card">
             <p class="card-title">
-              <a [routerLink]="['/main', coworking.id]">{{coworking.name}}</a>
+              <a [routerLink]="['/main', ad.id_place]">{{ad.name}}</a>
             </p>
             <p class="adress">
-              {{coworking.address}}
+              {{ad.address}}
             </p>
           </div>
           <div class="second-block__card">
-            <h4>{{ coworking.created_at | date: 'dd.MM.yyyy' }}</h4>
+            <h4>{{ ad.date_from | date: 'dd.MM.yyyy' }}</h4>
           </div>
           <div class="third-block_card">
-            <button class="watch-application" type="button"
-              [routerLink]="['/admin/requests-to-add/request', coworking.id]">
+            <button class="watch-application" type="button" [routerLink]="['/admin/requests-to-app/request', ad.id]">
               <span>Рассмотреть заявку</span>
             </button>
           </div>
         </div>
 
-        <div class="card denied" *ngIf="coworking.status == 'Отказано'">
+        <div class="card denied" *ngIf="ad.status == 'Отказано'">
           <div class="first-block__card">
             <p class="card-title">
-              <a [routerLink]="['/main', coworking.id]">{{coworking.name}}</a>
+              <a [routerLink]="['/main', ad.id]">{{ad.name}}</a>
             </p>
             <p class="adress">
-              {{coworking.address}}
+              {{ad.address}}
             </p>
           </div>
           <div class="second-block__card">
-            <h4>{{ coworking.created_at | date: 'dd.MM.yyyy' }}</h4>
+            <h4>{{ ad.date_from | date: 'dd.MM.yyyy' }}</h4>
           </div>
           <div class="information-description">
-            <p class="highlighted-text" [routerLink]="['/admin/requests-to-add/request', coworking.id]">
+            <p class="highlighted-text" [routerLink]="['/admin/requests-to-app/request', ad.id]">
               Отклонена
             </p>
             <img src="assets/img/denied.svg" alt="denied">
           </div>
         </div>
 
-        <div class="card approved" *ngIf="coworking.status == 'Одобрено'">
+        <div class="card approved" *ngIf="ad.status == 'Одобрено'">
           <div class="first-block__card">
             <p class="card-title">
-              <a [routerLink]="['/main', coworking.id]">{{coworking.name}}</a>
+              <a [routerLink]="['/main', ad.id]">{{ad.name}}</a>
             </p>
             <p class="adress">
-              {{coworking.address}}
+              {{ad.address}}
             </p>
           </div>
           <div class="second-block__card">
-            <h4>{{ coworking.created_at | date: 'dd.MM.yyyy' }}</h4>
+            <h4>{{ ad.date_from | date: 'dd.MM.yyyy' }}</h4>
           </div>
           <div class="information-description">
-            <p class="highlighted-text" [routerLink]="['/admin/requests-to-add/request', coworking.id]">
+            <p class="highlighted-text" [routerLink]="['/admin/requests-to-app/request', ad.id]">
               Одобрена
             </p>
             <img src="assets/img/approved.svg" alt="approved">
