--- a/src/app/components/favourites-page/favourites-page.component.html
+++ b/src/app/components/favourites-page/favourites-page.component.html
@@ -15,7 +15,7 @@
         <li style="border-right: solid 2px black ;"><a routerLink="/favourites">Избранное</a></li>
         <li><a routerLink="/profile">Настройки профиля</a></li>
         <li><a routerLink="/place-settings">Настройки мест</a></li>
-        <li *ngIf="user.role_id == 2 || user.role_id == 3"><a routerLink="/ad-business">Продвижение</a></li>
+        <li *ngIf="user.role_id == 2 || user.role_id == 3"><a routerLink="/ad-business/places">Продвижение</a></li>
       </ul>
     </div>
     <div class="top-information">
