--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.html
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.html
@@ -17,7 +17,7 @@
             <li><a routerLink="/favourites">Избранное</a></li>
             <li style="border-right: solid 2px black ;"><a routerLink="/profile">Настройки профиля</a></li>
             <li><a routerLink="/place-settings">Настройки мест</a></li>
-            <li *ngIf="user.role_id == 2 || user.role_id == 3"><a routerLink="/ad-business">Продвижение</a></li>
+            <li *ngIf="user.role_id == 2 || user.role_id == 3"><a routerLink="/ad-business/places">Продвижение</a></li>
           </ul>
         </div>
 
