--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,9 +1,9 @@
 @media screen and (max-width: 5000px) {
   .header-container {
     display: flex;
-    width: 1600px;
+    width: 83.33vw;
     height: 75px;
-    margin-left: 160px;
+    margin-left: 8.33vw;
     margin-top: 50px;
     border-bottom: 2px solid #e9e9e9;
     justify-content: space-between;
@@ -34,7 +34,7 @@
     position: absolute;
     width: 50px;
     height: 49.74px;
-    left: 153px;
+    left: 7.97vw;
     top: 60px;
 
     background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
@@ -60,7 +60,7 @@
     background: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
-    width: 211px;
+    width: 10.989583vw;
     height: 54px;
     margin-right: 29px;
     font-weight: 600;
